Avoid navigation overlapping content

--- a/src/_styles/_navbar.scss
+++ b/src/_styles/_navbar.scss
@@ -5,18 +5,28 @@
   height: $navbar-height;
   width: 100%;
 
-  padding: $navbar-padding 0;
-
   border-bottom: 1px solid $border-color;
   background-color: $poppy-bg;
 
   z-index: 1;
 
+  > .inner {
+    width: 100%;
+    max-width: 960px;
+
+    display: block;
+
+    margin: 0 auto;
+    padding: $navbar-padding;
+
+    white-space: nowrap;
+  }
+
   .logo {
     display: inline-block;
     height: $navbar-height - 2 * $navbar-padding;
 
-    margin-right: 100px;
+    margin-right: 40px;
 
     img {
       max-height: 100%;
@@ -24,16 +34,22 @@
     }
   }
 
-
   a {
-    margin-right: 20px;
-
     color: $font-color;
     text-transform: uppercase;
     text-decoration: none;
+    background-color: white;
+
+    @media (max-width: 960px) {
+      font-size: 13px;
+    }
 
     &:hover {
       color: $link-color;
+    }
+
+    + a {
+      margin-left: 20px;
     }
   }
 
